[package]
name = "interactive_mpso"
version = "0.1.0"
authors = ["Jelle Vos <j.v.jelle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3"
rand = "0.7"
fasthash = "0.4.0"
bytevec = "0.2.0"
permutation_iterator = "0.1.2"
